--- a/packages/astro-app/package.json
+++ b/packages/astro-app/package.json
@@ -11,9 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.1",
+    "@astrojs/react": "^3.6.1",
+    "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "svelte": "^4.2.18",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@iconify/react": "^5.0.2",
+    "@iconify/svelte": "^4.0.2"
   }
 }
